# H5Z-ZFP

./: .gitignore  .travis.yml  CMakeLists.txt  H5Zzfp.c  H5Zzfp.h  Makefile  README.md  README_MORE  config.make  gen.c  test_read.c  test_write.c
.github/: codeql-config.yml  codeql.yml  dependabot.yml
.github/workflows/: codeql.yml  codeql2.yml  codespell.yml  main.yml
cmake/: HDFMacros.cmake  h5z_zfp-config.cmake.in
docs/: README_MORE  cd_vals.rst  cmake.rst  conf.py  direct.rst  endian_issues.rst  h5repack.rst  hdf5_chunking.rst  index.rst  installation.rst  interfaces.rst  requirements.txt  tests.rst
src/: CMakeLists.txt  H5Zzfp.c  H5Zzfp_plugin.h  H5Zzfp_props.c  H5Zzfp_props.h  H5Zzfp_props_f.F90  H5Zzfp_props_private.h  Makefile
src/plugin/: H5Zzfp.c  H5Zzfp.h  Makefile
src/props/: H5Zzfp_props.c  H5Zzfp_props_f.F90  Makefile
test/: CMakeLists.txt  H5Zzfc.F90  Makefile  cd_vals2zfp_params.c  h5dump-rate.cmake  print_h5repack_farg.c  test_common.h  test_error.c  test_read.c  test_rw_fortran.F90  test_write.c
